--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 
 		<title>CT Lake Bioassessment</title>
 
+		<link rel="icon" type="image/x-icon" href="images/monitoring_assessment.png">
 		<link rel="stylesheet" href="dist/reset.css">
 		<link rel="stylesheet" href="dist/reveal.css">
 		<link rel="stylesheet" href="dist/theme/white_deep_brand_standards.css">
@@ -241,6 +242,33 @@
 						<h4>Indicator Species Analysis - Trophic Category</h4>
 						<hr>
 						<img src="images/eutrophic_ind_spp.png" alt="Eutrophic Indicator Spp">
+				</section>
+				<section>
+					<h4>Acknowledgements</h4>
+					<hr>
+					<img src="images/acknowledgements.png" alt="Acknowledgements" height = "600">
+				</section>
+				<section>
+					<h4>References</h4>
+					<hr>
+					Add refs
+				</section>
+				<section data-background-image="images/riga_lake.png" data-background-opacity="0.7">
+					<h3>Questions / Comments?</h3>
+					<hr>
+					<br>
+					<br>
+					<br>
+					Mary Becker, mary.becker@ct.gov
+					<br>
+					Tracy Lizotte, tracy.lizotte@ct.gov
+					<br>
+					<br>
+					<br>
+					<br>
+					<br>
+					<br>
+					<br>
 				</section>
 					
 				
