update db char slide

--- a/index.html
+++ b/index.html
@@ -15,13 +15,19 @@
 		<div class="reveal">
 			<div class="slides">
 				<section>
-					<img src="images/deep_title_slide.png" alt="CT DEEP">
+					<img src="images/deep_title_slide.png" alt="CT DEEP" height = "600">
 				</section>
 				<section>
 					<img src="images/ct_lakes.png" alt="CT Lakes">
 				</section>
 				<section>
-					Add info on lake drainage basins & lake area. Maybe lake area to db?
+					<h4>Statewide Lake Basin Characteristics</h4>
+					<hr>
+					<div class = "r-hstack">
+						<img src="images/lake_drainage_basin_area.png" alt="Lake Drainage Basin" height = "600">
+						<img src="images/lake_surface_area.png" alt="Lake Surface Area" height = "600">
+						<img src="images/lake_basin_surface_ratio.png" alt="Lake Drainage Surface Ratio" height = "600">
+					</div>
 				</section>
 				<section>
 					<img src="images/pataganset_lc16_basin.png" alt="CT Lakes" height = "600">
