--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 					<hr>
 					<div class = "r-hstack">
 						<p>Management-Driven with focus on the stressors, not the response</p>
-						<img src="images/historical_assessments.png" alt="Historical Assessments" height="650">
+						<img src="images/historical_assessments.png" alt="Historical Assessments" height="600">
 					</div>
 				</section>
 				<section>
@@ -136,16 +136,16 @@
 					<hr>
 					<div class = "r-hstack">
 						<p>Science-Driven with focus on the response of stressors</p>
-						<img src="images/future_assessments.png" alt="Future Assessments" height="650">
+						<img src="images/future_assessments.png" alt="Future Assessments" height="600">
 					</div>
 				</section>
 				<section>
 					<h4>Biological Assemblages in Lakes</h4>
 					<hr>
-						<img src="images/bio_assemblages_lakes.PNG" alt="Biological Assemblages in Lakes">
+						<img src="images/bio_assemblages_lakes.PNG" alt="Biological Assemblages in Lakes" height="600">
 				</section>
 				<section>
-					<img src="images/lake_study_locations.png" alt="Lake Bioassessment Sampling Sites">
+					<img src="images/lake_study_locations.png" alt="Lake Bioassessment Sampling Sites" height="600">
 				</section>
 				<section>
 					<h4>Study Plan - Profile and Water Chemistry</h4>
@@ -202,7 +202,7 @@
 				<section>
 					<h4>Sediment Core Dating</h4>
 					<hr>
-					<img src="images/estimated_core_year.png" alt="Estimated Core Year">
+					<img src="images/estimated_core_year.png" alt="Estimated Core Year" height="600">
 				</section>
 				<section>
 					<h4>Taxa Richness - 600 Valve Count</h4>
@@ -215,17 +215,17 @@
 				<section>
 					<h4>Occurrence & Frequency - 369 Unique Taxa </h4>
 					<hr>
-					<img src="images/taxa_occ_freq.png" alt="Taxa Richness Top Core">
+					<img src="images/taxa_occ_freq.png" alt="Taxa Richness Top Core" height="600">
 				</section>
 				<section>
 					<h4>Dissimilarity Between Top & Bottom Core</h4>
 					<hr>
-					<img src="images/dissimilarity_top_btm_core.png" alt="Dissimilarity Top & Bottom Core">
+					<img src="images/dissimilarity_top_btm_core.png" alt="Dissimilarity Top & Bottom Core" height="600">
 				</section>
 				<section>
 					<h4>Non-Metric Multi-Dimensional Scaling </h4>
 					<hr>
-					<img src="images/nmds_trophic_cat.png" alt="Taxa Richness Top Core">
+					<img src="images/nmds_trophic_cat.png" alt="Taxa Richness Top Core" height="600">
 				</section>
 				<section>
 					<h4>Dixit Et Al. 1999 - Sediment Diatom Inference </h4>
@@ -247,7 +247,7 @@
 				<section>
 						<h4>Indicator Species Analysis - Trophic Category</h4>
 						<hr>
-						<img src="images/eutrophic_ind_spp.png" alt="Eutrophic Indicator Spp">
+						<img src="images/eutrophic_ind_spp.png" alt="Eutrophic Indicator Spp" height="600">
 				</section>
 				<section>
 					<h4>Acknowledgements</h4>
