--- a/index.html
+++ b/index.html
@@ -257,7 +257,22 @@
 				<section>
 					<h4>References</h4>
 					<hr>
-					Add refs
+					<div class="smTxt">
+						<a href="https://doi.org/10.1139/f98-148"> Dixit, S.S., Smol, J.P., Charles, D.F., Hughes, R.M., Paulsen, S.G., Collins, G.B., 1999. 
+						Assessing water quality changes in the lakes of the northeastern United States using sediment diatoms. 
+						Can. J. Fish. Aquat. Sci. 56, 131–152. https://doi.org/10.1139/f98-148</a>
+						<br>
+						<br>
+						<a href="https://doi.org/10.1080/0269249X.2021.2006790"> Spaulding et al. 2021. Diatoms.org: supporting taxonomists, connecting communities. 
+						Diatom Research 36(4): 291-304. https://doi.org/10.1080/0269249X.2021.2006790</a>
+						<br>
+						<br>	
+					<a href="https://nepis.epa.gov/Exe/ZyNET.exe/20004ODM.TXT?ZyActionD=ZyDocument&Client=EPA&Index=1995+Thru+1999&Docs=&Query=&Time=&EndTime=&SearchMethod=1&TocRestrict=n&Toc=&TocEntry=&QField=&QFieldYear=&QFieldMonth=&QFieldDay=&IntQFieldOp=0&ExtQFieldOp=0&XmlQuery=&File=D%3A%5Czyfiles%5CIndex%20Data%5C95thru99%5CTxt%5C00000012%5C20004ODM.txt&User=ANONYMOUS&Password=anonymous&SortMethod=h%7C-&MaximumDocuments=1&FuzzyDegree=0&ImageQuality=r75g8/r75g8/x150y150g16/i425&Display=hpfr&DefSeekPage=x&SearchBack=ZyActionL&Back=ZyActionS&BackDesc=Results%20page&MaximumPages=1&ZyEntry=1&SeekPage=x&ZyPURL">
+						U.S. EPA, United States Environmental Protection Agency, 1998. 
+						Lake and Reservoir Bioassessment and Biocriteria (No. EPA 841-B-98-007).
+					</a>
+					</div>
+
 				</section>
 				<section data-background-image="images/riga_lake.png" data-background-opacity="0.7">
 					<h3>Questions / Comments?</h3>
@@ -276,8 +291,6 @@
 					<br>
 					<br>
 				</section>
-					
-				
 			</div>
 		</div>
 
