--- a/index.html
+++ b/index.html
@@ -258,9 +258,23 @@
 					<h4>References</h4>
 					<hr>
 					<div class="smTxt">
+						Canavan IV, R.W., Siver, P.A. 1995.  Connecticut Lakes: A study of the chemical and physical properties of fifty-six Connecticut Lakes.  
+						Connecticut College Arboretum, New London.
+						<br>
+						<br>
+						<a href="https://doi.org/10.2475/ajs.238.10.717">Deevy Jr., E.S. 1940. 
+							Limnological studies in Connecticut. V. A Contribution to Regional Limnology. 
+							Am. J. Sci. 238:717-741.</a>
+						<br>
+						<br>	
 						<a href="https://doi.org/10.1139/f98-148"> Dixit, S.S., Smol, J.P., Charles, D.F., Hughes, R.M., Paulsen, S.G., Collins, G.B., 1999. 
 						Assessing water quality changes in the lakes of the northeastern United States using sediment diatoms. 
 						Can. J. Fish. Aquat. Sci. 56, 131–152. https://doi.org/10.1139/f98-148</a>
+						<br>
+						<br>
+						Frink, C.R., Norvell, W.A. 1984. 
+						Chemical and physical properties of Connecticut lakes.  
+						Connecticut Agric. Exp. Stn. Bull. 817.
 						<br>
 						<br>
 						<a href="https://doi.org/10.1080/0269249X.2021.2006790"> Spaulding et al. 2021. Diatoms.org: supporting taxonomists, connecting communities. 
