--- a/index.html
+++ b/index.html
@@ -288,18 +288,20 @@
 					</div>
 
 				</section>
-				<section data-background-image="images/riga_lake.png" data-background-opacity="0.7">
+				<section data-background-image="images/riga_lake.png" data-background-opacity="0.6">
 					<h3>Questions / Comments?</h3>
 					<hr>
 					<br>
 					<br>
 					<br>
-					Mary Becker, mary.becker@ct.gov
+					<b>Mary Becker, mary.becker@ct.gov</b>
 					<br>
-					Tracy Lizotte, tracy.lizotte@ct.gov
+					<b>Tracy Lizotte, tracy.lizotte@ct.gov</b>
+					<br>
+					<b class = "smTxt2">https://marybecker.github.io/lake_bioassessment/</b>
 					<br>
 					<br>
-					<br>
+					
 					<br>
 					<br>
 					<br>
