--- a/index.html
+++ b/index.html
@@ -280,11 +280,16 @@
 						<a href="https://doi.org/10.1080/0269249X.2021.2006790"> Spaulding et al. 2021. Diatoms.org: supporting taxonomists, connecting communities. 
 						Diatom Research 36(4): 291-304. https://doi.org/10.1080/0269249X.2021.2006790</a>
 						<br>
-						<br>	
-					<a href="https://nepis.epa.gov/Exe/ZyNET.exe/20004ODM.TXT?ZyActionD=ZyDocument&Client=EPA&Index=1995+Thru+1999&Docs=&Query=&Time=&EndTime=&SearchMethod=1&TocRestrict=n&Toc=&TocEntry=&QField=&QFieldYear=&QFieldMonth=&QFieldDay=&IntQFieldOp=0&ExtQFieldOp=0&XmlQuery=&File=D%3A%5Czyfiles%5CIndex%20Data%5C95thru99%5CTxt%5C00000012%5C20004ODM.txt&User=ANONYMOUS&Password=anonymous&SortMethod=h%7C-&MaximumDocuments=1&FuzzyDegree=0&ImageQuality=r75g8/r75g8/x150y150g16/i425&Display=hpfr&DefSeekPage=x&SearchBack=ZyActionL&Back=ZyActionS&BackDesc=Results%20page&MaximumPages=1&ZyEntry=1&SeekPage=x&ZyPURL">
+						<br>
+						University of Connecticut Center for Land Use Education and Research.  
+						<a href = "https://clear.uconn.edu/projects/landscape/ct-landcoverviewer/">Changing Landscape Land Cover Ver. 2.3.  </a>
+						Accessed 11 March 2023.
+						<br>
+						<br>
+						<a href="https://nepis.epa.gov/Exe/ZyNET.exe/20004ODM.TXT?ZyActionD=ZyDocument&Client=EPA&Index=1995+Thru+1999&Docs=&Query=&Time=&EndTime=&SearchMethod=1&TocRestrict=n&Toc=&TocEntry=&QField=&QFieldYear=&QFieldMonth=&QFieldDay=&IntQFieldOp=0&ExtQFieldOp=0&XmlQuery=&File=D%3A%5Czyfiles%5CIndex%20Data%5C95thru99%5CTxt%5C00000012%5C20004ODM.txt&User=ANONYMOUS&Password=anonymous&SortMethod=h%7C-&MaximumDocuments=1&FuzzyDegree=0&ImageQuality=r75g8/r75g8/x150y150g16/i425&Display=hpfr&DefSeekPage=x&SearchBack=ZyActionL&Back=ZyActionS&BackDesc=Results%20page&MaximumPages=1&ZyEntry=1&SeekPage=x&ZyPURL">
 						U.S. EPA, United States Environmental Protection Agency, 1998. 
 						Lake and Reservoir Bioassessment and Biocriteria (No. EPA 841-B-98-007).
-					</a>
+						</a>
 					</div>
 
 				</section>
